--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,33 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
+#POSTGRESQL
+
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: desarrollo_db_PG
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: prueba_db_PG
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: produccion_db_PG
+
+
+#SQLITE3
+
+#test:
+#  adapter: sqlite3
+#  pool: 5
+#  timeout: 5000
+#  database: prueba_db
+#
+#development:
+#  adapter: sqlite3
+#  pool: 5
+#  timeout: 5000
+#  database: db/development.sqlite3
